initial markup completed for button > intro > Qs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <title>Document</title>
   </head>
   <body>
+    <main class="main">
+      <!-- start button to initialise application -->
+      <div class="btn-control">
+        <button class="btn" id="start-btn">Start</button>
+      </div>
+      <!-- intro rule section when start button pressed - will be dynamically rendered-->
+      <!-- <section class="section-container intro-container">
+        <header class="header"></header>
+        <h1 class="content-section-title"></h1>
+        <ol class="rule-list">
+          <li class="rule-item"></li>
+          <li class="rule-item"></li>
+          <li class="rule-item"></li>
+          <li class="rule-item"></li>
+        </ol>
+        <footer class="footer">
+          <div class="btn-control">
+            <button class="btn" id="next-btn">Next</button>
+          </div>
+        </footer>
+      </section> -->
+      <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
+      <!-- <section class="section-container question-container">
+        <header class="header">
+          <div class="timer">
+            <div class="time-left">Time Remaining</div>
+            <div class="time">15</div>
+          </div>
+          <div class="time-bar"></div>
+        </header>
+        <h1 class="content-section-title"></h1>
+        <ul class="choice-list">
+          <li class="choice-item"></li>
+          <li class="choice-item"></li>
+          <li class="choice-item"></li>
+          <li class="choice-item"></li>
+        </ul>
+        <footer class="footer">
+          <div class="btn-control">
+            <button class="btn" id="next-btn">Next</button>
+          </div>
+        </footer>
+      </section> -->
+    </main>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/result.js"></script>
   </body>
