general styling + start btn css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="main">
       <!-- start button to initialise application -->
       <div class="btn-control">
-        <button class="btn" id="start-btn">Start</button>
+        <button class="start-btn" id="start-btn">Start</button>
       </div>
       <!-- intro rule section when start button pressed - will be dynamically rendered-->
       <!-- <section class="section-container intro-container">
