--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <button class="start-btn" id="start-btn">Start</button>
       </div>
       <!-- intro rule section when start button pressed - will be dynamically rendered-->
-      <!-- <section class="section-container intro-container">
-        <header class="header"></header>
-        <h1 class="content-section-title"></h1>
+      <section class="section-container intro-container">
+        <header class="header">
+          <h1 class="content-section-title">Quiz Rules</h1>
+        </header>
         <ol class="rule-list">
           <li class="rule-item"></li>
           <li class="rule-item"></li>
@@ -28,7 +29,7 @@
             <button class="btn" id="next-btn">Next</button>
           </div>
         </footer>
-      </section> -->
+      </section>
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
       <!-- <section class="section-container question-container">
         <header class="header">
