css styling for question container

--- a/index.html
+++ b/index.html
@@ -4,54 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/489fc29660.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main class="main">
       <!-- start button to initialise application -->
-      <div class="btn-control">
+      <!-- <div class="btn-control">
         <button class="start-btn" id="start-btn">Start</button>
-      </div>
+      </div> -->
       <!-- intro rule section when start button pressed - will be dynamically rendered-->
-      <section class="section-container intro-container">
+      <!-- <section class="section-container intro-container">
         <header class="header">
           <h1 class="content-section-title">Quiz Rules</h1>
         </header>
         <ol class="rule-list">
-          <li class="rule-item"></li>
-          <li class="rule-item"></li>
-          <li class="rule-item"></li>
-          <li class="rule-item"></li>
+          <li class="rule-item">
+            The timer starts when you start the first question of the quiz. You
+            will be given 2 minutes to complete the quiz.
+          </li>
+          <li class="rule-item">
+            For each incorrect answer you will be deducted 10 seconds.
+          </li>
+          <li class="rule-item">
+            When all questions are answered, incomplete or the timer reaches 0,
+            the game is over.
+          </li>
+          <li class="rule-item">
+            You will be able to save your initials and your highscore! Enjoy!
+          </li>
         </ol>
         <footer class="footer">
           <div class="btn-control">
-            <button class="btn" id="next-btn">Next</button>
+            <button class="animate__animated animate__bounce btn" id="next-btn">
+              Next
+
+              <i class="fa-solid fa-circle-right"></i>
+            </button>
           </div>
         </footer>
-      </section>
+      </section> -->
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
-      <!-- <section class="section-container question-container">
+      <section class="section-container question-container">
         <header class="header">
           <div class="timer">
-            <div class="time-left">Time Remaining</div>
+            <div class="time-left">Time Left</div>
             <div class="time">15</div>
           </div>
           <div class="time-bar"></div>
         </header>
-        <h1 class="content-section-title"></h1>
-        <ul class="choice-list">
+        <h1 class="question-section-title">Question</h1>
+        <ol type="A" class="choice-list">
           <li class="choice-item"></li>
           <li class="choice-item"></li>
           <li class="choice-item"></li>
           <li class="choice-item"></li>
-        </ul>
-        <footer class="footer">
-          <div class="btn-control">
-            <button class="btn" id="next-btn">Next</button>
-          </div>
-        </footer>
-      </section> -->
+        </ol>
+      </section>
     </main>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/result.js"></script>
