header css + logo

--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
       <section class="section-container question-container">
         <header class="header">
           <div class="timer">
-            <div class="time-left">Time Left</div>
-            <div class="time">15</div>
+            <h1 class="application-title">
+              <i class="fa-brands fa-js"></i>Code Quiz
+            </h1>
+            <div class="timer-hud">
+              <div class="time-left">Time Left:</div>
+              <div class="time">15</div>
+            </div>
           </div>
           <div class="time-bar"></div>
         </header>
