started form sctn styling init markup html +  css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     ></script>
   </head>
   <body>
-    <main class="main">
+    <main class="main" id="main">
       <!-- start button to initialise application -->
       <!-- <div class="btn-control">
         <button class="start-btn" id="start-btn">Start</button>
       </div> -->
       <!-- intro rule section when start button pressed - will be dynamically rendered-->
-      <!-- <section class="section-container intro-container">
+      <!-- <section class="section-container" id="intro-section">
         <header class="header">
           <h1 class="content-section-title">Quiz Rules</h1>
         </header>
@@ -53,7 +53,7 @@
         </footer>
       </section> -->
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
-      <section class="section-container question-container">
+      <!-- <section class="section-container question-container">
         <header class="header">
           <div class="timer">
             <h1 class="application-title">
@@ -73,6 +73,18 @@
           <li class="choice-item"></li>
           <li class="choice-item"></li>
         </ol>
+      </section> -->
+
+      <!-- Form Section - will be dynamically rendered. initial markup to determine styling -->
+      <section class="section-container question-container">
+        <header class="header">
+          <div class="timer">
+            <h1 class="application-title">
+              <i class="fa-brands fa-js"></i>Code Quiz
+            </h1>
+          </div>
+        </header>
+        <h1 class="form-section-title">Form</h1>
       </section>
     </main>
     <script src="./assets/js/index.js"></script>
