highscore sctn css + btn fix

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <button class="start-btn" id="start-btn">Start</button>
       </div> -->
       <!-- info rule section when start button pressed - will be dynamically rendered-->
-      <!-- <section class="section-container" id="info-section">
+      <section class="section-container" id="info-section">
         <header class="header">
           <h1 class="content-section-title">Quiz Rules</h1>
+          <div class="hs-btn">
+            <a href="result.html"><i class="fa-solid fa-crown fa-xl"></i></a>
+          </div>
         </header>
         <ol class="rule-list">
           <li class="rule-item">
@@ -51,7 +54,7 @@
             </button>
           </div>
         </footer>
-      </section> -->
+      </section>
 
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
       <!-- <section class="section-container" id="question-container">
@@ -83,7 +86,7 @@
       </section> -->
 
       <!-- Form Section - will be dynamically rendered. initial markup to determine styling -->
-      <section class="section-container" id="form-container">
+      <!-- <section class="section-container" id="form-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -116,7 +119,7 @@
             <button class="playagain-btn">Play Again!</button>
           </div>
         </form>
-      </section>
+      </section> -->
     </main>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/result.js"></script>
