--- a/result.html
+++ b/result.html
@@ -22,9 +22,9 @@
         <button class="start-btn" id="start-btn">Start</button>
       </div> -->
       <!-- info rule section when start button pressed - will be dynamically rendered-->
-      <!-- <section class="section-container" id="info-section">
-        <header class="header">
-          <h1 class="content-section-title">Quiz Rules</h1>
+      <section class="section-container" id="highscore-section">
+        <header class="header hs-header">
+          <h1 class="content-section-title">Highscore</h1>
         </header>
         <ol class="rule-list">
           <li class="rule-item">
@@ -44,14 +44,10 @@
         </ol>
         <footer class="footer">
           <div class="btn-control">
-            <button class="animate__animated animate__bounce btn" id="next-btn">
-              Next
-
-              <i class="fa-solid fa-circle-right"></i>
-            </button>
+            <a class="playagain-btn" id="playagain-btn" href="">Play Again!</a>
           </div>
         </footer>
-      </section> -->
+      </section>
 
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
       <!-- <section class="section-container" id="question-container">
@@ -83,7 +79,7 @@
       </section> -->
 
       <!-- Form Section - will be dynamically rendered. initial markup to determine styling -->
-      <section class="section-container" id="form-container">
+      <!-- <section class="section-container" id="form-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -116,7 +112,7 @@
             <button class="playagain-btn">Play Again!</button>
           </div>
         </form>
-      </section>
+      </section> -->
     </main>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/result.js"></script>
