layout fixes - tweaking css all sctns

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body>
     <main class="main" id="main">
       <!-- start button to initialise application -->
-      <!-- <div class="btn-control">
+      <div class="btn-control">
         <button class="start-btn" id="start-btn">Start</button>
-      </div> -->
+      </div>
       <!-- info rule section when start button pressed - will be dynamically rendered-->
       <section class="section-container" id="info-section">
         <header class="header">
@@ -57,7 +57,7 @@
       </section>
 
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
-      <!-- <section class="section-container" id="question-container">
+      <section class="section-container" id="question-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -83,10 +83,10 @@
           <li class="choice-item"></li>
           <li class="choice-item"></li>
         </ol>
-      </section> -->
+      </section>
 
       <!-- Form Section - will be dynamically rendered. initial markup to determine styling -->
-      <!-- <section class="section-container" id="form-container">
+      <section class="section-container" id="form-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -119,7 +119,7 @@
             <button class="playagain-btn">Play Again!</button>
           </div>
         </form>
-      </section> -->
+      </section>
     </main>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/result.js"></script>
