--- a/result.html
+++ b/result.html
@@ -44,7 +44,9 @@
         </ol>
         <footer class="footer">
           <div class="btn-control">
-            <a class="playagain-btn" id="playagain-btn" href="">Play Again!</a>
+            <a class="playagain-btn" id="playagain-btn" href="index.html"
+              >Play Again!</a
+            >
           </div>
         </footer>
       </section>
