hs sctn + js logo fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- info rule section when start button pressed - will be dynamically rendered-->
       <section class="section-container" id="info-section">
         <header class="header">
-          <h1 class="content-section-title">Quiz Rules</h1>
+          <h1 class="content-section-title"><i class="fa-brands fa-js"></i>Quiz Rules</h1>
           <div class="hs-btn">
             <a href="result.html"><i class="fa-solid fa-crown fa-xl"></i></a>
           </div>
