--- a/result.html
+++ b/result.html
@@ -24,22 +24,35 @@
       <!-- info rule section when start button pressed - will be dynamically rendered-->
       <section class="section-container" id="highscore-section">
         <header class="header hs-header">
-          <h1 class="content-section-title">Highscore</h1>
+          <h1 class="content-section-title">
+            <i class="fa-brands fa-js"></i>Highscore
+          </h1>
         </header>
-        <ol class="rule-list">
-          <li class="rule-item">
-            The timer starts when you start the first question of the quiz. You
-            will be given 2 minutes to complete the quiz.
+        <h1 class="rank-title">Highscore Rankings</h1>
+        <ol class="rank-list">
+          <li class="rank-item">
+            <div>Michael San</div>
+            <div>10</div>
           </li>
-          <li class="rule-item">
-            For each incorrect answer you will be deducted 10 seconds.
+          <li class="rank-item">
+            <div>Michael</div>
+            <div>20</div>
           </li>
-          <li class="rule-item">
-            When all questions are answered, incomplete or the timer reaches 0,
-            the game is over.
+          <li class="rank-item">
+            <div>Bob</div>
+            <div>30</div>
           </li>
-          <li class="rule-item">
-            You will be able to save your initials and your highscore! Enjoy!
+          <li class="rank-item">
+            <div>Jones</div>
+            <div>100</div>
+          </li>
+          <li class="rank-item">
+            <div>Michael</div>
+            <div>70</div>
+          </li>
+          <li class="rank-item">
+            <div>Bob</div>
+            <div>20</div>
           </li>
         </ol>
         <footer class="footer">
