renamed html file for hs + hs logo link updated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header class="header">
           <h1 class="content-section-title"><i class="fa-brands fa-js"></i>Quiz Rules</h1>
           <div class="hs-btn">
-            <a href="result.html"><i class="fa-solid fa-crown fa-xl"></i></a>
+            <a href="highscore.html"><i class="fa-solid fa-crown fa-xl"></i></a>
           </div>
         </header>
         <ol class="rule-list">
@@ -93,7 +93,7 @@
               <i class="fa-brands fa-js"></i>Code Quiz
             </h1>
             <div class="hs-btn">
-              <a href="result.html"><i class="fa-solid fa-crown fa-xl"></i></a>
+              <a href="highscore.html"><i class="fa-solid fa-crown fa-xl"></i></a>
               
               </div>
             </div>
