--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <button class="start-btn" id="start-btn">Start</button>
       </div>
       <!-- info rule section when start button pressed - will be dynamically rendered-->
-      <section class="section-container" id="info-section">
+      <section class="section-container section-hide" id="info-section">
         <header class="header">
-          <h1 class="content-section-title"><i class="fa-brands fa-js"></i>Quiz Rules</h1>
+          <h1 class="content-section-title">
+            <i class="fa-brands fa-js"></i>Quiz Rules
+          </h1>
           <div class="hs-btn">
             <a href="highscore.html"><i class="fa-solid fa-crown fa-xl"></i></a>
           </div>
@@ -47,7 +49,7 @@
         </ol>
         <footer class="footer">
           <div class="btn-control">
-            <button class="animate__animated animate__bounce btn" id="next-btn">
+            <button class="btn" id="next-btn">
               Next
 
               <i class="fa-solid fa-circle-right"></i>
@@ -57,7 +59,7 @@
       </section>
 
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
-      <section class="section-container" id="question-container">
+      <!-- <section class="section-container" id="question-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -83,10 +85,10 @@
           <li class="choice-item"></li>
           <li class="choice-item"></li>
         </ol>
-      </section>
+      </section> -->
 
       <!-- Form Section - will be dynamically rendered. initial markup to determine styling -->
-      <section class="section-container" id="form-container">
+      <!-- <section class="section-container" id="form-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -119,7 +121,7 @@
             <button class="playagain-btn">Play Again!</button>
           </div>
         </form>
-      </section>
+      </section> -->
     </main>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/result.js"></script>
