working on js - render q sctn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="main" id="main">
       <!-- start button to initialise application -->
       <div class="btn-control">
-        <button class="start-btn" id="start-btn">Start</button>
+        <button class="start-btn" id="start-btn" type="button">Start</button>
       </div>
       <!-- info rule section when start button pressed - will be dynamically rendered-->
       <section class="section-container section-hide" id="info-section">
