working on js. refactored code

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
 
       <!-- Question Section - will be dynamically rendered. initial markup to determine styling -->
-      <!-- <section class="section-container" id="question-container">
+      <section class="section-container section-hide" id="question-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -68,27 +68,27 @@
             <div class="hud-wrapper">
               <div class="hs-hud">
                 <div class="hs-points">Pts</div>
-                <div class="highscore">10</div>
+                <div class="highscore"></div>
               </div>
               <div class="timer-hud">
                 <div class="time-left">Time</div>
-                <div class="time">15</div>
+                <div class="time"></div>
               </div>
             </div>
           </div>
           <div class="time-bar"></div>
         </header>
-        <h1 class="question-section-title">Question</h1>
+        <!-- <h1 class="question-section-title">Question</h1>
         <ol type="A" class="choice-list">
           <li class="choice-item"></li>
           <li class="choice-item"></li>
           <li class="choice-item"></li>
           <li class="choice-item"></li>
-        </ol>
-      </section> -->
+        </ol> -->
+      </section>
 
       <!-- Form Section - will be dynamically rendered. initial markup to determine styling -->
-      <!-- <section class="section-container" id="form-container">
+      <section class="section-container section-hide" id="form-container">
         <header class="header">
           <div class="header-container">
             <h1 class="application-title">
@@ -121,8 +121,9 @@
             <button class="playagain-btn">Play Again!</button>
           </div>
         </form>
-      </section> -->
+      </section>
     </main>
+    <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/result.js"></script>
   </body>
