working on form sctn logic

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
               </div>
             </div>
           </div>
-          <div class="time-bar"></div>
         </header>
 
                <!-- will be dynamically rendered -->
@@ -111,16 +110,17 @@
         <form>
           <div class="form-control">
             <input
-              name="full-name"
+              name="initials"
+              id ="initials"
               class="form-input"
               type="text"
-              placeholder="Enter Your Full Name!"
+              placeholder="Enter Your initials!"
             />
           </div>
 
           <div class="form-control form-btns">
             <button class="submit-btn" type="submit">Submit</button>
-            <button class="playagain-btn">Play Again!</button>
+            <a class="playagain-btn" href="index.html">Play Again!</a>
           </div>
         </form>
       </section>
