highscore.html js finished

--- a/highscore.html
+++ b/highscore.html
@@ -29,7 +29,7 @@
           </h1>
         </header>
         <h1 class="rank-title">Highscore Rankings</h1>
-        <ol class="rank-list">
+        <!-- <ol class="rank-list">
           <li class="rank-item">
             <div>Michael San</div>
             <div>10</div>
@@ -54,8 +54,11 @@
             <div>Bob</div>
             <div>20</div>
           </li>
-        </ol>
+        </ol> -->
         <footer class="footer">
+          <div class="btn-control">
+            <a class="playagain-btn" id="reset-btn">Reset Scores</a>
+          </div>
           <div class="btn-control">
             <a class="playagain-btn" id="playagain-btn" href="index.html"
               >Play Again!</a
@@ -129,7 +132,6 @@
         </form>
       </section> -->
     </main>
-    <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/result.js"></script>
+    <script src="./assets/js/highscore.js"></script>
   </body>
 </html>
