--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </section>
     </main>
     <script src="./assets/js/questions.js"></script>
+    <script src="./assets/js/highscore.js"></script>
     <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/result.js"></script>
   </body>
 </html>
