--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="btn-control">
         <button class="start-btn" id="start-btn" type="button">Start</button>
       </div>
-      <!-- info rule section when start button pressed - will be dynamically rendered-->
+      <!-- info rule section when start button pressed -->
       <section class="section-container section-hide" id="info-section">
         <header class="header">
           <h1 class="content-section-title">
