added hero title

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <main class="main" id="main">
+      <h1 class="hero-title">Code Quiz</h1>
       <!-- start button to initialise application -->
       <div class="btn-control">
         <button class="start-btn" id="start-btn" type="button">Start</button>
