added defer to script tag

--- a/highscore.html
+++ b/highscore.html
@@ -62,6 +62,6 @@
         </footer>
       </section>
     </main>
-    <script src="./assets/js/highscore.js"></script>
+    <script src="./assets/js/highscore.js" defer></script>
   </body>
 </html>
