--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
         </form>
       </section>
     </main>
-    <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/highscore.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/questions.js" defer></script>
+    <script src="./assets/js/index.js" defer></script>
   </body>
 </html>
